force-app/main/default/objects/Opportunity/fields/Country_of_Sample_Shipment_Origin_global__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Sample_Shipment_Origin_global__c</fullName>
    <label>Country of Sample Shipment Origin</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>