force-app/main/default/objects/Opportunity/fields/CV_signoff_Budget__c.field-meta.xml
<CustomField>
    <fullName>CV_signoff_Budget__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Priority of the collaboration, set by RPR</description>
    <label>Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>