force-app/main/default/objects/Opportunity/fields/CV_Signoff_Phenotypes_Represented__c.field-meta.xml
<CustomField>
    <fullName>CV_Signoff_Phenotypes_Represented__c</fullName>
    <label>Phenotypes Represented</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>