force-app/main/default/objects/Opportunity/fields/CV_Signoff_Updated__c.field-meta.xml
<CustomField>
    <fullName>CV_Signoff_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CV Signoff Updated</label>
    <type>Checkbox</type>
</CustomField>