force-app/main/default/objects/Opportunity/fields/CVD_F__c.field-meta.xml
<CustomField>
    <fullName>CVD_F__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CVD/F</label>
    <type>Checkbox</type>
</CustomField>