force-app/main/default/objects/Opportunity/fields/Data_Dictionary_Obtained_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Dictionary_Obtained_Date__c</fullName>
    <description>JG April 2020</description>
    <label>Data Dictionary Obtained Date</label>
    <type>Date</type>
</CustomField>