force-app/main/default/objects/Opportunity/fields/Data_Freeze__c.field-meta.xml
<CustomField>
    <fullName>Data_Freeze__c</fullName>
    <description>date/time stamps, username - could be multiple batches

Formerly &apos;Data Freeze&quot; changed by JG April 2020</description>
    <label>Genomic Data Freeze</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>