force-app/main/default/objects/Opportunity/fields/Deal_Team__c.field-meta.xml
<CustomField>
    <fullName>Deal_Team__c</fullName>
    <formula>RGC_Champion__r.FirstName     &amp; &quot; &quot; &amp; RGC_Champion__r.LastName
&amp; &quot;; &quot; &amp;  RGC_Co_Champion1__r.FirstName &amp; &quot; &quot; &amp; RGC_Co_Champion1__r.LastName 
&amp; &quot;; &quot; &amp;  RGC_Co_Champion2__r.FirstName &amp; &quot; &quot; &amp; RGC_Co_Champion2__r.LastName 
&amp; &quot;; &quot; &amp;  RGC_Co_Champion__r.FirstName  &amp; &quot; &quot; &amp; RGC_Co_Champion__r.LastName
&amp; &quot;; &quot; &amp;  RPM_Leader__r.FirstName       &amp; &quot; &quot; &amp; RPM_Leader__r.LastName 
&amp; &quot;; &quot; &amp;  PBO_Associate__r.FirstName    &amp; &quot; &quot; &amp; PBO_Associate__r.LastName 
&amp; &quot;; &quot; &amp;  TEXT(Legal_LeaderPL__c) 
&amp; &quot;; &quot; &amp;  Budget_Leader__r.FirstName    &amp; &quot; &quot; &amp; Budget_Leader__r.LastName</formula>
    <label>Deal Team</label>
    <type>Text</type>
</CustomField>