force-app/main/default/objects/Opportunity/fields/Description_Other__c.field-meta.xml
<CustomField>
    <fullName>Description_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Description</label>
    <type>Checkbox</type>
</CustomField>