force-app/main/default/objects/Opportunity/fields/Diabetic_retinopathy__c.field-meta.xml
<CustomField>
    <fullName>Diabetic_retinopathy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diabetic Retinopathy</label>
    <type>Checkbox</type>
</CustomField>