force-app/main/default/objects/Opportunity/fields/DNA_Extraction_Requested__c.field-meta.xml
<CustomField>
    <fullName>DNA_Extraction_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requested by AF 3.8</description>
    <label>DNA Extraction Requested</label>
    <type>Checkbox</type>
</CustomField>