force-app/main/default/objects/Opportunity/fields/DTP_Collaboration__c.field-meta.xml
<CustomField>
    <fullName>DTP_Collaboration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DTP Collaboration</label>
    <type>Checkbox</type>
</CustomField>