force-app/main/default/objects/Opportunity/fields/Early_Assessment_Icon__c.field-meta.xml
<CustomField>
    <fullName>Early_Assessment_Icon__c</fullName>
    <formula>IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=06856000000gk5J&amp;operationContext=CHATTER&amp;contentId=05T56000005EbG4/green-bubble-transparent.png&quot;, &quot;&quot; , 60, 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Early Assessment</label>
    <type>Text</type>
</CustomField>