force-app/main/default/objects/Opportunity/fields/EAS__c.field-meta.xml
<CustomField>
    <fullName>EAS__c</fullName>
    <label>Ancestry-EAS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>