force-app/main/default/objects/Opportunity/fields/EHR_Data_Available__c.field-meta.xml
<CustomField>
    <fullName>EHR_Data_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EHR Data Available</label>
    <type>Checkbox</type>
</CustomField>