force-app/main/default/objects/Opportunity/fields/Endometriosis__c.field-meta.xml
<CustomField>
    <fullName>Endometriosis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Endometriosis</label>
    <type>Checkbox</type>
</CustomField>