force-app/main/default/objects/Opportunity/fields/Erythematosus__c.field-meta.xml
<CustomField>
    <fullName>Erythematosus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Erythematosus</label>
    <type>Checkbox</type>
</CustomField>