force-app/main/default/objects/Opportunity/fields/EU_Model_Clauses__c.field-meta.xml
<CustomField>
    <fullName>EU_Model_Clauses__c</fullName>
    <label>EU Processor Model Clauses</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Completed</fullName>
                <default>true</default>
                <label>Not Completed</label>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>