force-app/main/default/objects/Opportunity/fields/Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Execution_Date__c</fullName>
    <description>JG 05.06.20</description>
    <label>Execution Date</label>
    <type>Date</type>
</CustomField>