force-app/main/default/objects/Opportunity/fields/Exome_sequencing_complete__c.field-meta.xml
<CustomField>
    <fullName>Exome_sequencing_complete__c</fullName>
    <description>date/time stamps, username - could be multiple batches</description>
    <label>Exome Sequencing Complete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>