force-app/main/default/objects/Opportunity/fields/Ext_Can_Share_Results_w_Acad_Source__c.field-meta.xml
<CustomField>
    <fullName>Ext_Can_Share_Results_w_Acad_Source__c</fullName>
    <label>Ext Can Share Results w/ Acad Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes per Terms</fullName>
                <label>Yes per RCA Terms</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>