force-app/main/default/objects/Opportunity/fields/External_Can_Share_Genetic_Data__c.field-meta.xml
<CustomField>
    <fullName>External_Can_Share_Genetic_Data__c</fullName>
    <label>External Can Share Genetic Data</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes per terms</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>