force-app/main/default/objects/Opportunity/fields/External_Can_Share_Genomic_Data__c.field-meta.xml
<CustomField>
    <fullName>External_Can_Share_Genomic_Data__c</fullName>
    <label>External Can Share Genomic Data</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes per Terms</fullName>
                <label>Yes per RCA Terms</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>