force-app/main/default/objects/Opportunity/fields/External_Scientific_Collaborator__c.field-meta.xml
<CustomField>
    <fullName>External_Scientific_Collaborator__c</fullName>
    <label>External Scientific Collaborator</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>