force-app/main/default/objects/Opportunity/fields/External_Share_Phenotype_Data__c.field-meta.xml
<CustomField>
    <fullName>External_Share_Phenotype_Data__c</fullName>
    <label>External Share Phenotype Data</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes per terms</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>