force-app/main/default/objects/Opportunity/fields/Finalize_Research_Plan__c.field-meta.xml
<CustomField>
    <fullName>Finalize_Research_Plan__c</fullName>
    <description>Status - critical for notifications,dashboards and reports

Formerly &quot;Finalize Research Plan&quot;, changed by JG April 2020</description>
    <label>Finalized Research Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
                <isActive>false</isActive>
                <label>Not Applicable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>