force-app/main/default/objects/Opportunity/fields/First_Pass_Analysis__c.field-meta.xml
<CustomField>
    <fullName>First_Pass_Analysis__c</fullName>
    <description>date/time stamps, username - could be multiple batches</description>
    <label>First Pass Analysis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>