force-app/main/default/objects/Opportunity/fields/Founder_Special_Population__c.field-meta.xml
<CustomField>
    <fullName>Founder_Special_Population__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Founder/Special Population</label>
    <type>Checkbox</type>
</CustomField>