force-app/main/default/objects/Opportunity/fields/FSP__c.field-meta.xml
<CustomField>
    <fullName>FSP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FSP</label>
    <type>Checkbox</type>
</CustomField>