force-app/main/default/objects/Opportunity/fields/Fully_Executed_Date__c.field-meta.xml
<CustomField>
    <fullName>Fully_Executed_Date__c</fullName>
    <inlineHelpText>Last date Contract was signed</inlineHelpText>
    <label>Fully Executed Date</label>
    <type>Date</type>
</CustomField>