force-app/main/default/objects/Opportunity/fields/Functional_Modeling__c.field-meta.xml
<CustomField>
    <fullName>Functional_Modeling__c</fullName>
    <description>Does it include Functional Modeling?</description>
    <label>Functional Modeling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes (with DSA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>