force-app/main/default/objects/Opportunity/fields/Funding__c.field-meta.xml
<CustomField>
    <fullName>Funding__c</fullName>
    <label>Funding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Completed</fullName>
                <default>true</default>
                <label>Not Completed</label>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>