force-app/main/default/objects/Opportunity/fields/Funds_Available__c.field-meta.xml
<CustomField>
    <fullName>Funds_Available__c</fullName>
    <description>Previously &quot;Funds Available&quot; changed by JG April 2020</description>
    <label>Budget Assessment Date</label>
    <type>Date</type>
</CustomField>