force-app/main/default/objects/Opportunity/fields/Future_Collaboration_Considerations__c.field-meta.xml
<CustomField>
    <fullName>Future_Collaboration_Considerations__c</fullName>
    <label>Future Collaboration Considerations</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>