force-app/main/default/objects/Opportunity/fields/GDPR_Classification_of_D_P_vs_Controlle__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Classification_of_D_P_vs_Controlle__c</fullName>
    <label>GDPR Data Process vs. Controller Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Completed</fullName>
                <default>true</default>
                <label>Not Completed</label>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>