force-app/main/default/objects/Opportunity/fields/GDPR_DataRole__c.field-meta.xml
<CustomField>
    <fullName>GDPR_DataRole__c</fullName>
    <description>Processor vs controller for EU agreements</description>
    <label>GDPR Data Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processor</fullName>
            </value>
            <value>
                <fullName>Controller</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>