force-app/main/default/objects/Opportunity/fields/Genetic_Material__c.field-meta.xml
<CustomField>
    <fullName>Genetic_Material__c</fullName>
    <label>Genetic Material</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DNA</fullName>
            </value>
            <value>
                <fullName>RNA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>