force-app/main/default/objects/Opportunity/fields/Genomic_Data_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Genomic_Data_Sharing__c</fullName>
    <label>Genomic Data Sharing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Completed</fullName>
                <default>true</default>
                <label>Not Completed</label>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>