force-app/main/default/objects/Opportunity/fields/Genomic_Informatics_Transfer_Approved__c.field-meta.xml
<CustomField>
    <fullName>Genomic_Informatics_Transfer_Approved__c</fullName>
    <description>Status Y/N, for CV-signoff slide</description>
    <label>Genomic Informatics Transfer Approved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>