force-app/main/default/objects/Opportunity/fields/Genotyping__c.field-meta.xml
<CustomField>
    <fullName>Genotyping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Genotyping</label>
    <type>Checkbox</type>
</CustomField>