force-app/main/default/objects/Opportunity/fields/Geographic_Area__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Area__c</fullName>
    <label>Geographic Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>European Union</fullName>
            </value>
            <value>
                <fullName>Rest of World</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>