force-app/main/default/objects/Opportunity/fields/Giant_Cell_Arteritis__c.field-meta.xml
<CustomField>
    <fullName>Giant_Cell_Arteritis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Giant Cell Arteritis</label>
    <type>Checkbox</type>
</CustomField>