force-app/main/default/objects/Opportunity/fields/Glaucoma__c.field-meta.xml
<CustomField>
    <fullName>Glaucoma__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Glaucoma</label>
    <type>Checkbox</type>
</CustomField>